# pycounts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  einstein.txt  example.ipynb
src/: pycounts.py
src/pycounts/: plotting.py  pycounts.py
