[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "A file words counter"
authors = ["Samuel Roberto <samucadeus23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
